@@ -8,6 +8,3 @@
 PCIIDS:
 - another mirror at Atrey?
 - delete old DB at SF
-
-- -Winline
-- release testing is bogus
