@@ -1,5 +1,8 @@
 2006-09-09  Martin Mares  <mj@ucw.cz>
 
+	* Makefile: Moved all system-dependent decisions to lib/configure,
+	since config.mk is included in the top-level Makefile anyway.
+
 	* lib/configure: When configuring for Linux, ignore the kernel version
 	and always build all access methods.
 
